--- a/作业1：安邦应用中心/index.html
+++ b/作业1：安邦应用中心/index.html
@@ -7,10 +7,45 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>安邦应用中心</title>
     <link rel="stylesheet" href="./less/index.css" />
-    <script src=""></script>
+    <script src="./js/Setrem.js"></script>
   </head>
 
-  <body></body>
+  <body>
+    <!-- 主体部分 -->
+    <main>
+      <!-- 头部 -->
+      <div class="header">
+        <a href="#"></a>
+        <p>APP应用</p>
+      </div>
+      <!-- 应用安装部分 -->
+      <div class="box">
+        <span></span>
+        <p>
+          云办公<br />
+          <span class="text">V 2.1.1 64MB</span>
+        </p>
+        <a href="#">安装</a>
+      </div>
+      <!-- 文字介绍部分 -->
+      <div class="content">
+        <h4>内容介绍</h4>
+        <p>
+          【i邦理财】平台依托安邦集团优势资源，整合集团产品为移动互联网用户
+          构建集理财、投资、保障一体化的"个人资产管理生态圈
+          为您提供丰富的金融产品，建立良好的金融生态体系，让您在社交娱乐的同时收获财富，
+          让投资理财变得更加轻松、快乐、简单!现诚邀各位安邦IT人参与体验，
+          首次注册登陆还有好礼送哦。
+        </p>
+      </div>
+    </main>
+    <!-- 底部部分 -->
+    <footer>
+      <a href="#" class="a1">App应用</a>
+      <a href="#" class="a2">公众号</a>
+      <a href="#" class="a3">常用网址</a>
+    </footer>
+  </body>
 </html>
