作业二头部完成

--- a/作业2：我的-设置/index.html
+++ b/作业2：我的-设置/index.html
@@ -7,10 +7,20 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>我的设置</title>
     <link rel="stylesheet" href="./less/index.css" />
-    <script src=""></script>
+    <script src="./js/Setrem.js"></script>
   </head>
 
-  <body></body>
+  <body>
+    <!-- 头部部分 -->
+    <header>
+      <a href="#"></a>
+      <span>设置</span>
+    </header>
+    <!-- 主体部分 -->
+    <main></main>
+    <!-- 底部部分 -->
+    <footer></footer>
+  </body>
 </html>
