作业二主体完成

--- a/作业2：我的-设置/index.html
+++ b/作业2：我的-设置/index.html
@@ -19,7 +19,13 @@
       <span>设置</span>
     </header>
     <!-- 主体部分 -->
-    <main></main>
+    <main>
+      <a href="#">个人信息</a>
+      <a href="#" class="clear">清空缓存</a>
+      <a href="#">关于我们</a>
+      <a href="#">意见反馈</a>
+      <a href="#">检查更新</a>
+    </main>
     <!-- 底部部分 -->
     <footer></footer>
   </body>
