作业二完成提交

--- a/作业2：我的-设置/index.html
+++ b/作业2：我的-设置/index.html
@@ -27,6 +27,6 @@
       <a href="#">检查更新</a>
     </main>
     <!-- 底部部分 -->
-    <footer></footer>
+    <footer><a href="#">退出当前账号</a></footer>
   </body>
 </html>
