--- a/作业3：我的商品收藏/index.html
+++ b/作业3：我的商品收藏/index.html
@@ -7,9 +7,9 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>我的商品收藏</title>
     <link rel="stylesheet" href="./less/index.css" />
-    <script src=""></script>
+    <script src="./js/Setrem.js"></script>
   </head>
 
   <body></body>
