--- a/作业3：我的商品收藏/index.html
+++ b/作业3：我的商品收藏/index.html
@@ -12,5 +12,15 @@
     <script src="./js/Setrem.js"></script>
   </head>
 
-  <body></body>
+  <body>
+    <!-- 头部 -->
+    <header>
+      <a href="#" class="logo"></a>
+      <span>
+        <a href="#">店铺</a>
+        <a href="#" class="goo">商品</a>
+      </span>
+      <a href="#" class="clear">清空收藏夹</a>
+    </header>
+  </body>
 </html>
