作业四头部完成

--- a/作业4：代金券/index.html
+++ b/作业4：代金券/index.html
@@ -9,8 +9,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="./less/index.css" />
-    <script src=""></script>
+    <script src="./js/Setrem.js"></script>
   </head>
-
-  <body></body>
+  <body>
+    <!-- 头部 -->
+    <header>
+      <a href="#"></a>
+      <span>代金券</span>
+    </header>
+    <!-- 主体 -->
+    <main></main>
+  </body>
 </html>
