作业四完成提交

--- a/作业4：代金券/index.html
+++ b/作业4：代金券/index.html
@@ -18,6 +18,54 @@
       <span>代金券</span>
     </header>
     <!-- 主体 -->
-    <main></main>
+    <main>
+      <span class="gear"></span>
+      <div class="top">
+        <div class="toptext">
+          <div class="topmain">
+            <img src="./images/baisei.png" alt="" />
+            <span class="introduce">
+              西贝莜面村代金券<br />
+              有效期：2016-03-31
+            </span>
+          </div>
+          <span class="touse">待使用</span>
+        </div>
+        <!-- 左右半圆 -->
+        <div class="round">
+          <span></span>
+          <span></span>
+        </div>
+        <div class="Ticket">
+          券号
+          <span>5436 4245 72</span>
+        </div>
+      </div>
+      <span class="gearbottom"></span>
+      <!-- 2 -->
+      <span class="gear"></span>
+      <div class="top">
+        <div class="toptext">
+          <div class="topmain">
+            <img src="./images/baisei2.png" alt="" />
+            <span class="introduce">
+              海底捞火锅代金劵<br />
+              有效期：2016-03-31
+            </span>
+          </div>
+          <span class="touse touse2">已使用</span>
+        </div>
+        <!-- 左右半圆 -->
+        <div class="round">
+          <span></span>
+          <span class="s2"></span>
+        </div>
+        <div class="Ticket">
+          券号
+          <span>5436 4245 72</span>
+        </div>
+      </div>
+      <span class="gearbottom"></span>
+    </main>
   </body>
 </html>
