作业五头部完成

--- a/作业5：请假条/index.html
+++ b/作业5：请假条/index.html
@@ -7,10 +7,19 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>请假条</title>
     <link rel="stylesheet" href="./less/index.css" />
-    <script src=""></script>
+    <script src="./js/Setrem.js"></script>
   </head>
 
-  <body></body>
+  <body>
+    <!-- 头部 -->
+    <header>
+      <span></span>
+      <p>假单查询</p>
+      <span></span>
+    </header>
+    <!-- 主体 -->
+    <main></main>
+  </body>
 </html>
